--- a/repository.yaml
+++ b/repository.yaml
@@ -1,4 +1,3 @@
-# https://developers.home-assistant.io/docs/add-ons/repository#repository-configuration
-name: Example Home Assistant add-on repository
-url: 'https://github.com/home-assistant/addons-example'
-maintainer: Awesome Maintainer <awesome@example.com>
+name: Infinitude 1F Server
+url: 'https://github.com/Tjcav/infinitude_1F'
+maintainer: tjcav <thomas.cavaliere@gmail.com>
